# Gatewright

./: .gitignore  README.md  gatewright.sh  pyproject.toml
docs/: orchestrator-design.md  runtime-design.md
examples/: README.md
examples/01-basic/: claude-single-step.yaml  codex-linear-pipeline.yaml  codex-single-step.yaml
examples/01-basic/prompts/: claude-single-step.md  single-step.md
examples/02-loops-and-parallel/: codex-gated-loop.yaml  codex-parallel-fanout.yaml
examples/02-loops-and-parallel/prompts/: loop-body.md  loop-gate.md  parallel-coordinator.md  parallel-synth.md  parallel-worker.md
examples/03-multi-provider/: codex-and-claude-pipeline.yaml
examples/04-error-handling/: codex-missing-input.yaml  codex-recoverable-failure.yaml  codex-resume-mid-loop.yaml
examples/05-human-in-the-loop/: codex-plan-then-execute.yaml  codex-wait-for-user-confirmation.yaml
examples/_testing/: complex-feature-flow.yaml  mock-gated-loop.json  mock-gated-loop.yaml
examples/_testing/prompts/: collect-a.md  (+3 more)
src/gatewright/: __init__.py
tests/orchestrator/: test_app_controls.py  test_app_message_rendering.py  test_app_status_rendering.py  test_scheduler.py  test_scheduler_control.py  test_scheduler_decisions.py  test_scheduler_events.py  test_scheduler_input.py  test_scheduler_looping.py  test_scheduler_more.py  test_scheduler_operator_recovery.py  test_scheduler_outputs.py  test_scheduler_parallel_fork.py  test_scheduler_recovery_handler.py  test_scheduler_start_from.py  test_workflow_loading.py
tests/runtime/: test_mock_agent.py  test_provider_backends.py
(+49 files in other folders)
